--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,13 @@
         "jsx": "react-jsx",
         "allowImportingTsExtensions": true,
         "strictNullChecks": true,
-        "strictFunctionTypes": true
+        "strictFunctionTypes": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
     },
     "exclude": [
         "node_modules",
