--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "homepage": "https://solanehub.github.io/PokeMMO-Compendium/",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"vite\"",
+    "server": "node server/server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
