--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "format": "prettier . --write"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "npm-check-updates": "^19.1.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
+    "globals": "^16.5.0",
+    "prettier": "^3.6.2",
     "vite": "^7.2.2"
   }
 }
