--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "npm-check-updates": "^19.1.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
