--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-compiler": "^19.1.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "zod-validation-error": "^5.0.0"
   }
 }
