--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "lucide-react": "^0.556.0",
     "npm-check-updates": "^19.1.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -32,7 +33,6 @@
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "^19.1.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.3.0",
