--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.1.17",
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
@@ -24,6 +26,7 @@
     "npm-check-updates": "^19.1.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   },
