--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "lucide-react": "^0.557.0",
-    "npm-check-updates": "^19.1.2",
+    "firebase": "^12.6.0",
+    "lucide-react": "^0.559.0",
+    "npm-check-updates": "^19.2.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
