--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "format": "prettier \"src/**/*.jsx\" --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "build": "vite build",
+    "build": "vite build && cp dist/index.html dist/404.html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@tailwindcss/vite": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
-    "lucide-react": "^0.559.0",
+    "lucide-react": "^0.560.0",
     "npm-check-updates": "^19.2.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.2",
+    "react-dom": "^19.2.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
