--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
+    "firebase-functions": "^7.0.1",
     "lucide-react": "^0.561.0",
     "npm-check-updates": "^19.2.0",
     "react": "^19.2.3",
@@ -39,6 +40,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "firebase-admin": "^13.6.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
