--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "concurrently \"npm run server\" \"vite\"",
     "server": "node server/server.js",
     "preview": "vite preview",
-    "format": "prettier \"src/**/*.jsx\" --write",
+    "format": "prettier \"src/**/*.{jsx,js}\" --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "build": "vite build && cp dist/index.html dist/404.html",
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.1",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
     "firebase-functions": "^7.0.1",
