--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.3.1",
     "express": "^5.2.1",
     "firebase": "^12.6.0",
