--- a/package.json
+++ b/package.json
@@ -25,16 +25,13 @@
     "dompurify": "^3.3.1",
     "express": "^5.2.1",
     "firebase": "^12.7.0",
-    "firebase-functions": "^7.0.2",
     "lucide-react": "^0.562.0",
-    "npm-check-updates": "^19.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18",
-    "zod": "^4.2.1"
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -44,12 +41,10 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "firebase-admin": "^13.6.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "vite": "^6.2.0",
-    "zod-validation-error": "^5.0.0"
+    "vite": "^6.2.0"
   }
 }
