--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier \"src/**/*.{jsx,js}\" --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "build": "vite build && cp dist/index.html dist/404.html",
+    "build": "vite build && node -e \"require('fs').copyFileSync('dist/index.html', 'dist/404.html')\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -24,14 +24,14 @@
     "crypto-js": "^4.2.0",
     "dompurify": "^3.3.1",
     "express": "^5.2.1",
-    "firebase": "^12.7.0",
+    "firebase": "^12.8.0",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.11.0",
+    "react-router-dom": "^7.12.0",
     "tailwindcss": "^4.1.18",
-    "zod": "^4.3.4"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -42,8 +42,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.3.0",
-    "globals": "^16.5.0",
-    "prettier": "^3.7.4",
+    "globals": "^17.0.0",
+    "prettier": "^3.8.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "vite": "^6.2.0"
   }
