--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: SonarQube Scan 🔍
-        uses: SonarSource/sonarqube-scan-action@v4
+      - name: SonarCloud Scan 🔍
+        uses: SonarSource/sonarcloud-scan-action@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} # Ometti se usi SonarCloud
