--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -20,23 +21,16 @@ jobs:
       - name: Setup Node ⚙️
         uses: actions/setup-node@v4
         with:
-          node-version: 24.13.1
+          node-version: 22
           cache: 'npm'
 
-      - name: Cache node modules 📦
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Install Dependencies 🔧
+        run: npm ci
 
-      - name: Install and Build 🔧
-        run: |
-          npm ci
-          npm run build
+      - name: Build 🏗️
+        run: npm run build
         env:
-          VITE_BASE_PATH: /PokeMMO-Compendium/
+          VITE_BASE_PATH: /
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
@@ -44,12 +38,6 @@ jobs:
           VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}
           VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
           VITE_STORAGE_SECRET_KEY: ${{ secrets.VITE_STORAGE_SECRET_KEY }}
-
-      - name: Deploy to GitHub Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist
-          branch: gh-pages
 
       - name: Deploy to Firebase Hosting 🚀
         uses: FirebaseExtended/action-hosting-deploy@v0
