test: comprehensive integration and unit tests for all UI components and hooks

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install Dependencies 🔧
         run: npm ci
 
+      - name: Test 🧪
+        run: npm run test:run
+
       - name: Build 🏗️
         run: npm run build
         env:
