--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,13 +4,26 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "**.md"
+      - "docs/**"
+      - ".vscode/**"
   pull_request:
     branches:
       - main
       - production
+    paths-ignore:
+      - "**.md"
+      - "docs/**"
+      - ".vscode/**"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   validate:
+    name: Lint & Type-check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -19,14 +32,30 @@ jobs:
       - name: Setup Node ⚙️
         uses: actions/setup-node@v4
         with:
-          node-version: 24.13.1
-          cache: 'npm'
+          node-version: 22
+          cache: "npm"
 
       - name: Install Dependencies 📦
         run: npm ci
 
       - name: Validate 🔍
         run: npm run validate
+
+  test:
+    name: Unit & Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+
+      - name: Setup Node ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: "npm"
+
+      - name: Install Dependencies 📦
+        run: npm ci
 
       - name: Test 🧪
         run: npm run test:run
