--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
     "cross-env": "10.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
