--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "17.3.0",
     "jsdom": "28.1.0",
+    "msw": "2.12.10",
     "prettier": "3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "stylelint": "^17.3.0",
